[#39] Fix item roll button border
Item roll button no longer overlaps icon border.

--- a/stylesheets/components/_artifact--monster.scss
+++ b/stylesheets/components/_artifact--monster.scss
@@ -742,14 +742,15 @@
 					content: "\f6cf";
 					background: rgba(black, 0.5);
 					color: white;
-					height: 100%;
-					width: 100%;
+					height: calc(100% - 4px);
+					width: calc(100% - 4px);
+					border-radius: 1cm;
 					display: flex;
 					justify-content: center;
 					align-items: center;
 					position: absolute;
-					left: 0;
-					top: 0;
+					left: 2px;
+					top: 2px;
 					font-family: "Font Awesome 5 Free";
 					-webkit-font-smoothing: antialiased;
 					font-style: normal;
